--- a/templates/upload_assignment_document.html
+++ b/templates/upload_assignment_document.html
@@ -62,7 +62,7 @@
                         <tbody>
                             <tr>
                                 <td style="text-align:center">{{i}}</td>
-                                <td><a href="/static/{{res[1]}}" _target="blank">{{res[1]}}</a></td>
+                                <td><a href="/static/{{res[1]}}" target="_blank" rel="noopener noreferrer">{{res[1]}}</a></td>
                                 <td>{{res[2]}}</td>
                                 <td>{{res[3]}}</td>
                                 <td style="text-align:center">{{res[4]}}</td>
