--- a/templates/menu.html
+++ b/templates/menu.html
@@ -259,6 +259,8 @@
       <h3>Statistics</h3>        
       {% if usrgrp == 'A' or usrgrp=='S' or usrgrp=='F' %}
         <p><a href="/attendance_stats"><img src="\static\images\caret-right.svg"> Attendance Statistics</a></p>
+        <p><a href="/view_attendance_master"><img src="\static\images\caret-right.svg"> Attendance Table View</a></p>
+        <p><a href="/view_course_master"><img src="\static\images\caret-right.svg"> Course Table View</a></p>
       {% elif usrgrp=='Z' %}
         <p>This section options is note for Super User.</p>
 
