--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -89,7 +89,7 @@ form .txt_field{
   text-decoration: underline;
 }
 input[type="submit"]{
-  width: 100%;
+  width: 30%;
   height: 50px;
   border: 1px solid;
   background: #2691d9;
@@ -99,21 +99,13 @@ input[type="submit"]{
   font-weight: 700;
   cursor: pointer;
   outline: none;
-}
+  }
 input[type="submit"]:hover{
   border-color: #2691d9;
   transition: .5s;
 }
-.signup_link{
-  margin: 30px 0;
-  text-align: center;
-  font-size: 16px;
-  color: #666666;
-}
-.signup_link a{
-  color: #2691d9;
-  text-decoration: none;
-}
-.signup_link a:hover{
-  text-decoration: underline;
+
+input[type="button"]:hover{
+  border-color: #2691d9;
+  transition: .5s;
 }
