--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Add News</title>
     <link rel="stylesheet"  href="{{ url_for('static', filename='css/style1.css') }}">
-   
-      
+        
   </head>
   <body>
     <div class="center">
@@ -34,7 +33,8 @@
           <label>Source URL</label>
         </div>
         <div><span>&nbsp;</span></div>
-        <input type="submit" value="Add News">
+        <input type="submit" value="Add News">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="/menu">Go to Main Menu</a>
         <div><span>&nbsp;</span></div>
       </div>
       </form>
