--- a/templates/view_atable.html
+++ b/templates/view_atable.html
@@ -48,6 +48,17 @@
 </table>
 
 <table id="customers" class="center">
+    <tr>  
+        <th>Pid</th>  
+        <th>Dept. ID </th>  
+        <th>Semester</th>  
+        <th>Subject</th>  
+        <th>Faculty ID</th>  
+        <th>Student ID</th>
+        <th>Date</th>
+        <th>Prensent</th>
+        <th>Absent</th>
+    </tr>  
      
     {% for row in rows %}  
         <tr>  
