--- a/templates/upload_attendance_excel.html
+++ b/templates/upload_attendance_excel.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>Upload Excel</title>
+        <title>Upload Attendance</title>
         <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
 		<script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
     </head>
     <body>
         <div class="col-md-offset-3 col-md-5" style="margin-top:50px">
             <form action="/upload_attendance_excel" method="POST" enctype="multipart/form-data">
-                <h3 class="page-header text-primary">Upload Attendance Excel File</h3>
+                <h3 class="page-header text-primary">Upload Attendance</h3>
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                         {% for category,message in messages %}
@@ -16,11 +16,11 @@
                     {% endif %}
                 {% endwith %}
                  <div class="form-group">
-                    <label>Browse Attendance Excel File</label>
+                    <label>Browse Attendance File</label>
                     <input type="file" class="form-control" name="uploadExcel">
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Upload Attendance Excel File" class="btn btn-primary btn-block">
+                    <input type="submit" value="Upload Attendance File" class="btn btn-primary btn-block">
                     <br>                    
                     <a href="/menu">Go to Main Menu</a>  
                 </div>
@@ -30,12 +30,12 @@
         {% if data %}
             <div class="row">
             <div class="col-md-offset-3 col-md-5">
-                <h3 class="page-header text-primary "><span class="fa fa-image">  Already Uploaded Attendance Excel File</span></h3>
+                <h3 class="page-header text-primary "><span class="fa fa-image">  Already Uploaded Attendance File</span></h3>
                  <table class="table table-bordered">
                       <thead>
                             <tr>
                             <th>S.No</th>
-                            <th>Attendance Excel File</th>
+                            <th>Attendance File</th>
                             <th>Database Update Status</th>
                             <th>Delete File</th>
                         </tr>
@@ -47,7 +47,7 @@
                                 <td style="text-align:center">{{i}}</td>
                                 <td><a href="{{url_for('view_attendance_data', id = res['pid'])}}" target="_blank" rel="noopener noreferrer"  class="btn btn-primary btn-block">{{res['exceldata']}}</a></td>
                                 {% if res['dbupdate'] =='Y'%}
-                                    <td><a href="" class="btn btn-primary btn-block" disabled>Attendance Data Uploaded to DB</a> </td>
+                                    <td>Attendance Data Uploaded to Database</a> </td>
                                 {% else %}
                                 <td><a href="{{url_for('insert_attendance_into_db', id = res['pid'])}}" class="btn btn-primary btn-block" >Upload Attendance to Database</a> </td>
                                 {% endif %}
