--- a/templates/upload_assignment_document.html
+++ b/templates/upload_assignment_document.html
@@ -28,7 +28,7 @@
                     <td style="width:20%">
                         <div>
                             <label>Due Date </label>
-                            <input type="date" id="duedate" name="duedate">
+                            <input type="date" id="duedate" name="duedate" required>
                         </div>
                     </td>
                 </tr>
