--- a/templates/upload_assignment_document.html
+++ b/templates/upload_assignment_document.html
@@ -21,7 +21,7 @@
                     <td style="width:70%">
                         <div class="form-group">
                             <label>Browse Document File</label>
-                            <input type="file" class="form-control" name="uploadassignment">
+                            <input type="file" class="form-control" name="uploadassignment" required>
                         </div>
                     </td>
                     <td style="width:10%">&nbsp;  </td>
