--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -13,7 +13,7 @@
         <div>&nbsp;</div>
         <div class="radio">
           <span></span>
-          <input type="radio" id="usergroup1" name="news" value="D" required>
+          <input type="radio" id="usergroup1" name="news" value="D" required checked>
           <label for="age1">Department News</label> &nbsp;&nbsp;&nbsp;
           <input type="radio" id="usergroup2" name="news" value="C" required>
           <label for="usergroup2">Club News</label>
