--- a/templates/upload_attendance_excel.html
+++ b/templates/upload_attendance_excel.html
@@ -17,7 +17,7 @@
                 {% endwith %}
                  <div class="form-group">
                     <label>Browse Attendance File</label>
-                    <input type="file" class="form-control" name="uploadExcel">
+                    <input type="file" class="form-control" name="uploadExcel" required>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Upload Attendance File" class="btn btn-primary btn-block">
