--- a/templates/view_contactus.html
+++ b/templates/view_contactus.html
@@ -62,21 +62,8 @@ html {
 </head>
 <body>
 
-<h2>Contact Project Team Members</h2>
+<h2>Contact Current Admin</h2>
 <br>
-
-<div class="column">
-  <div class="card">
-    <img src="/static/images/Akshay.JPG" alt="Akshay Kumar"  width="240" height="288">
-    <div class="container">
-      <h2>Akshay Kumar</h2>
-      <p class="title">Project Team Memberr</p>
-      <p>Artificial Intelligence & Data Science Department</p>
-      <p>2021 Batch</p>
-      <p><a href = "mailto: 71762108018@cit.edu.in">71762108018@cit.edu.in</a></p>
-    </div>
-  </div>
-</div>
 
 <div class="row">
   <div class="column">
@@ -91,23 +78,8 @@ html {
       </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <img src="/static/images/Subramanian.JPG" alt="Subramanian"  width="240" height="288">
-        <div class="container">
-          <h2>Subramanian</h2>
-          <p class="title">Project Team Member</p>
-          <p>Artificial Intelligence & Data Science Department</p>
-          <p>2021 Batch</p>
-          <p><a href = "mailto: 71762108018@cit.edu.in">71762108018@cit.edu.in</a></p>
-        </div>
-      </div>
-    </div>
-    <br>
-
-    <table class="center">
+<br>
+ <table class="center">
     <tr>
         <td style="text-align:left"><a href="/menu">Go to Main Menu</a>  </td>
     </tr>
