--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="center">
-      <h1>Buddy Portal Login</h1>
+      <h1>OTUS Login</h1>
       <form method="post" action = "/login">
 
         <div class="txt_field">
