--- a/templates/menu_admin.html
+++ b/templates/menu_admin.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet"  href="{{ url_for('static', filename='css/vtickler.css') }}">
   <link rel="stylesheet"  href="{{ url_for('static', filename='css/navbar_header.css') }}">
   <link rel="stylesheet"  href="{{ url_for('static', filename='css/navbar_footer.css') }}">
-  <link rel="stylesheet"  href="{{ url_for('static', filename='css/navbar_side.css') }}">
-</head>
+  </head>
 <body>
     <div class="navbar">
         <a class="active" href="/menu"><i class="fa fa-fw fa-home"></i> {{ name}} Home</a>
@@ -22,13 +21,12 @@
     <table id="customers" class="center">
       <tr>
           <td>
-              <h2>Hi {{ name }}, Welcome to Buddy Portal</h2>
+              <h2>Hi {{ name }}, Welcome to OTUS</h2>
           </td>
       </tr>
       <tr>
-          <td><p>This Buddy Portal is developed by Akshay Kumar (717621080xx), Karthick Srinivas S (71762108018), and 
-            R Subramanian (717621080xx) from Artifical Intelligence & Data Science Department 
-            as part of Industrial Revolution 4.0 Subject project.</p> </td>
+        <td><p>Project OTUS was developed <u>by</u> the students, <u>for</u> the students, keeping in mind the quintessential needs <u>of</u> the students.<br>
+        Proud indigenous product of CIT, Coimbatore. Joing effort of the AI&DS Dept. Batch of 2021.</p> </td>
       </tr>
     </table>
   </div>
