--- a/templates/menu_student.html
+++ b/templates/menu_student.html
@@ -23,13 +23,12 @@
   <table id="customers" class="center">
     <tr>
         <td>
-            <h2>Hi {{ name }}, Welcome to Buddy Portal</h2>
+            <h2>Hi {{ name }}, Welcome to OTUS</h2>
         </td>
     </tr>
     <tr>
-        <td><p>This Buddy Portal is developed by Akshay Kumar (717621080xx), Karthick Srinivas S (71762108018), and 
-          R Subramanian (717621080xx) from Artifical Intelligence & Data Science Department 
-          as part of Industrial Revolution 4.0 Subject project.</p> </td>
+      <td><p>Project OTUS was developed <u>by</u> the students, <u>for</u> the students, keeping in mind the quintessential needs <u>of</u> the students.<br>
+        Proud indigenous product of CIT, Coimbatore. Joing effort of the AI&DS Dept. Batch of 2021.</p> </td>
     </tr>
 </table>
 </div>
