--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ body{
   padding: 0;
   height: 100vh;
   overflow: hidden;
-  background-color: rgb(8, 146, 180);;
+  background-color: rgb(68, 65, 65);
 }
 .center{
   position: absolute;
